RESOLVED FIXED47410
WTR: Prevent sending the Done message twice on test timeout.
https://bugs.webkit.org/show_bug.cgi?id=47410
Summary WTR: Prevent sending the Done message twice on test timeout.
Jocelyn Turcotte
Reported 2010-10-08 05:30:10 PDT
WTR: Prevent sending the Done message twice on test timeout.
Attachments
Patch (2.24 KB, patch)
2010-10-08 05:31 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2010-10-08 05:31:47 PDT
Andras Becsi
Comment 2 2010-10-08 06:56:23 PDT
Comment on attachment 70229 [details] Patch Clearing flags on attachment: 70229 Committed r69395: <http://trac.webkit.org/changeset/69395>
Andras Becsi
Comment 3 2010-10-08 06:56:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.