third_party/WebKit/WebKitTools/WebKitTestRunner/InjectedBundle/InjectedBundle.h
@@ -89,7 +89,8 @@ private:
     
     enum State {
         Idle,
-        Testing
+        Testing,
+        Stopping
     };
     State m_state;
 };
